fixed issue with text in card overflowing outside the card.Applied font to card-title calss directly

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,12 +67,19 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
-}
+    font-size: 16px !important; 
+} 
 /* Reduce card and text size for smaller screens */
-@media (max-width: 576px) {
-    .action-card {
-        padding: 1rem;
-        font-size: 0.5rem;
+@media (max-width: 530px) {
+    .card-title{
+        padding: 10px;
+        font-size: 0.9rem !important;
+    }
+}
+
+@media (max-width: 530px){
+    .action-card{
+        padding: 0.5rem !important;
     }
 }
 
